# confidential-script-tee

./: Cargo.toml  README.md  flake.nix  pcr-policy-stub.json
crates/confidential-script-wire/: Cargo.toml
crates/confidential-script-wire/src/: lib.rs
src/: lib.rs  settings.rs
src/api/: encryption_middleware.rs  public_key.rs  setup.rs  verify_and_sign.rs
tests/: secure_verify_and_sign.rs  verify_and_sign.rs
tests/common/: mod.rs
